Fixed spacing, back button.

--- a/css/i.css
+++ b/css/i.css
@@ -2412,7 +2412,7 @@ button {
   position: absolute;
   top: 50%;
   margin-top: -50px;
-  margin-left: 2%; }
+  margin-left: 3%; }
 
 .second {
   position: absolute;
