--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -140,7 +140,7 @@ button {
 	position: absolute;
 	top: 50%;
 	margin-top: -50px;
-	margin-left: 2%
+	margin-left: 3%
 }
 
 .second {
